# matrix_multiplication_algorithms_for_RISC-V

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md
API/: Matrix.cpp  Matrix.h
api/: API.md  Matrix.cpp  Matrix.h  MatrixLib.cpp  MatrixLib.h  matrix_lib.cpp  matrix_lib.h
benchmarking/: CMakeLists.txt  benchmarking.c  benchmarking.h  benchmarking_asm.c  benchmarking_block_transpose.c  benchmarking_naive.c  benchmarking_sec.c  benchmarking_sec.h  benchmarking_transpose.c  benchmarking_vectorization.c  benchmarking_vectorize_x86.c  create_graph.py  requirements.txt
cmake/: toolchain-riscv.cmake  toolchain-x86.cmake
docs/: benchmarking.md  build.md  docker.md  tests.md
example/: CMakeLists.txt  multiply.cpp
include/: matrix_operation.h  naive.h
src/: Makefile  main.c  main.cpp  matmul_asm_wrapper.c  matmul_block_transpose.c  matmul_rvv.s  matmul_transpose.c  matmul_vectorization.c  matmul_vectorize_x86.c  matrix_operation.c  naive.c  riscv_vectorization1.c  riscv_vectorization2.c
tests/: CMakeLists.txt  command.txt  main.cpp  runtest.cpp  test1.cpp
tests/api_tests/: main.cpp  test_constructors_func.cpp  test_contructors_func.cpp  test_copy_and_equal_func.cpp  test_exception_func.cpp  test_overload_operators_func.cpp  test_product_func.cpp  test_setSize_func.cpp  test_set_and_get_func.cpp  tests_generator.cpp  tests_generator.h
tests/kernel_tests/: main.cpp  matsize_generator.cpp  matsize_generator.h  test1.cpp  test_matmul_block_transpose.cpp  test_naive.cpp  test_transpose.cpp  test_vectorization.cpp  test_vectorization_asm.cpp  test_vectorize_x86.cpp
